--- a/Deneme/src/main/resources/templates/process/login.html
+++ b/Deneme/src/main/resources/templates/process/login.html
@@ -10,6 +10,7 @@
 <td th:text="${username}"></td><br />
 <td th:text="${password}"></td><br />
 <td th:text="${token}"></td><br />
+<a href='/process/list'>Listele</a>
 </tr>
 
 </body>
