--- a/Deneme/src/main/resources/templates/index.html
+++ b/Deneme/src/main/resources/templates/index.html
@@ -5,9 +5,12 @@
 <title>Giriş Sayfası</title>
 </head>
 <body>
-        <h1>Login page</h1>
-        <p th:if="${loginError}" class="error">Wrong user or password</p>
-        <form th:action="@{/process/login}" method="post">
+	<div align="center">
+        <h>Sistem Girişi</h>
+        <p th:if="${loginError}" class="error">
+			<td th:text="${loginError}"></td>
+		</p>
+        <form  th:action="@{/}" method="post">
             <label for="username">Username</label>:
             <input type="text" id="username" name="username" autofocus="autofocus" /> <br />
             <label for="password">Password</label>:
@@ -15,5 +18,6 @@
             <input type="submit" value="Log in" />
         </form>
        <!--   <p><a href="../index.html" th:href="@{/index.html}">Back to home page</a></p> -->
+     </div>
 </body>
 </html>
