--- a/Deneme/src/main/resources/templates/error/error.html
+++ b/Deneme/src/main/resources/templates/error/error.html
@@ -5,6 +5,6 @@
 <title>Error</title>
 </head>
 <body>
- <p><a href="../index.html" th:href="@{/index.html}">Back to home page</a></p> 
+ <p><a th:href="@{/index}">Anasayfaya Dön</a></p> 
 </body>
 </html>
