--- a/Deneme/src/main/resources/templates/process/welcome.html
+++ b/Deneme/src/main/resources/templates/process/welcome.html
@@ -9,6 +9,9 @@
 <tr>
 <a href='/process/list'>Liste Sayfası için Tıklayınız</a><br/>
 <a href='/process/report'>Merchant-Acquire Report Sayfası için Tıklayınız</a>
+<br/><br/><br/>
+
+<a href='/?tip=1'>Çıkış Yap</a>
 </tr>
 
 </body>
