--- a/Deneme/src/main/resources/templates/process/report.html
+++ b/Deneme/src/main/resources/templates/process/report.html
@@ -3,40 +3,14 @@
 <head>
 <meta charset="UTF-8"/>
 <title>Merchant-Acquirer Report</title>
-</head>
+
 <script type="text/javascript" th:src="@{/js/jquery-3.1.1.min.js}"></script>
-<script type="text/javascript">
+<script type="text/javascript" th:src="@{/js/sonucGetir.js}"></script>
 
-function sonucGetir() {
-	
-    if ($('#fromDate').val() == '' || $('#toDate').val() == '' ||
-    		$('#merchant').val() == '' || $('#acquirer').val() == ''){
-    	alert("Parametreler Eksik");
-    	return;
-    }
-    var params ={ fromDate: $('#fromDate').val(), 
-        	toDate:$('#toDate').val(),
-        	merchant:$('#merchant').val(),
-        	acquirer:$('#acquirer').val()
-        	};
-    $.ajax({
-        type: "GET",
-        url: "reportData?data="+encodeURIComponent(JSON.stringify(params)),
-        beforeSend: function(xhr) {
-            xhr.setRequestHeader("Accept", "application/json");
-            xhr.setRequestHeader("Content-Type", "application/json");
-        },
-         success:function(data){
-        	 console.log(data);
-        	 var res = $.parseJSON( data ).response;
-        	 console.log(res);
-         }
-   });
-}
-
-</script>
+</head>
 <body>
 
+<div align="center">
 <form>
     <span >Report Details</span>
     <div class="listBlock">
@@ -53,9 +27,10 @@ function sonucGetir() {
         </div>
 
         <!-- Results block -->
-        <div id="resultsBlock">
+        <div id="resultsBlock" style="display:none">
 
-	       <table id="table" class="hidden">
+	       <table id="table1" BORDER="5" BORDERCOLOR="#808080" CELLSPACING="1" WIDTH="300">
+			<caption><FONT FACE="ARIAL" SIZE="2">Liste Kayıtları</FONT></caption>
 	                <tr>
 	                    <th>Count</th>
 						<th>Total</th>
@@ -63,9 +38,13 @@ function sonucGetir() {
 	                </tr>
 	        </table>
         </div>
+        <br/>
+        <br/>
+        <a th:href="@{/process/welcome}">Geri Dön</a>
     </div>
 </form>
 
+</div>
 
 </body>
 </html>
